Problem: repository.* naming convention
This convention doesn't make a lot of sense anymore as it can contain
multiple SIT repositories now. It's very confusing to have
repositories with multiple repositories.

Solution: rename `repository` to `target`

--- a/playbook/templates/getmail.j2
+++ b/playbook/templates/getmail.j2
@@ -1,6 +1,6 @@
 #! /usr/bin/env bash
-{% if item.value.default_repository is defined -%}
-export REPOSITORY={{ item.value.default_repository }}
+{% if item.value.default_target is defined -%}
+export TARGET={{ item.value.default_target }}
 {% endif -%}
 setlock "/var/run/getmail.{{ item.key }}" /usr/bin/getmail --rcfile="$HOME/.getmail/{{ item.key }}" \
         --getmaildir=/var/run/oldmail -n
